queXS 1.14.2 - Changes since 1.14.1

A bug fix release for the 1.14 series of queXS

Fixed issue: Call attempts can exist with no calls - clear them out
Fixed issue: Samples with call attempt time slots assigned will still draw new numbers out of defined times
Fixed issue: Importing CSV with empty columns at end of file causing failure
Fixed issue: Cannot delete outcomes

Translations have been updated - thank you for your continued contributions!


queXS 1.14.1 - Changes since 1.14.0

New feature: CAS Authentication

Fixed bug: When self completing group by group or all-in-one, numeric key presses may change previous answers
Fixed bug: lp:1528293 fix and translated outcomes descriptions, added 'outcome id' to output (thanks Alex)
Fixed bug: lp:1527201 output to csv in dataoutput.php (thanks Alex)
Fixed bug: lp:1527201 (thanks Alex)
Fixed bug: Removed extraneous documentation

Thank you again to those who contributed translations - these have been updated.


queXS 1.14.0 - Changes since 1.13.1

New feature: Session based authentication instead of web server authentication
New feature: Ordering of sample files on an overall and by questionnaire level to determine which numbers will be drawn first
New feature: Client panel now displays basic summary stats
New feature: Can add custom outcome codes and assign a subset of outcomes to questionnaires
New feature: Added skeletonquest Limesurvey theme for self completion (mobile friendly)

Bug fix: lp:1510368 Lime quota with more than one option in list doesn't display in queXS quota report
Bug fix: lp:1510369 When survey completed as "Self completed online", quotas based on either sample or data inputs, are not counted as completed
Fixed Bug: Web first case generation failing with some insert strings
Fixed bug: Error inserting case due to token random generation collision

Changes for session authentication:

queXS now uses the Limesurvey session based authentication system to authenticate all users.
